force-app/main/default/objects/ParentObj__c/ParentObj__c.object-meta.xml
<CustomObject>
    <label>ParentObj</label>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ParentsObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>