force-app/main/default/objects/ParentObj__c/fields/Job_Sector__c.field-meta.xml
<CustomField>
    <fullName>Job_Sector__c</fullName>
    <label>Job Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Govt</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>UnEmployee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>